# coffeeCalendar

./: CMakeLists.txt  README.md  config.example  lv_conf.h
include/: calendar_utils.h  calutils.h  ccal.h  config.h  error.h  ical.h  ical2ccal.h
src/: calendar_utils.c  calutils.c  ccal.c  config.c  error.c  ical.c  ical2ccal.c  icalparser.c  main.c  mouse_cursor_icon.c  test.c
